--- a/public/html/admin.html
+++ b/public/html/admin.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My Portfolio - Bruno Oliveira</title>
+    <title>My Portfolio - Admin Page</title>
   </head>
   <body>
-    Home
+    <%= projects %>
   </body>
 </html>
