--- a/public/html/projects.html
+++ b/public/html/projects.html
@@ -107,7 +107,7 @@
                   <thead>
                     <tr>
                       <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Project</th>
-                      <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Link</th>
+                      <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">URL</th>
                       <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Github</th>
                       <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Status</th>
                       <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7"></th>
