--- a/public/html/project-form.html
+++ b/public/html/project-form.html
@@ -20,7 +20,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="apple-touch-icon" sizes="76x76" href="../vendor/material-dashboard/assets/img/apple-icon.png">
   <link rel="icon" type="image/png" href="../vendor/material-dashboard/assets/img/favicon.png">
-  <title>My Portfolio - Projects</title>
+  <title>My Portfolio - New Project</title>
   <!--     Fonts and icons     -->
   <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900|Roboto+Slab:400,700" />
   <!-- Nucleo Icons -->
@@ -34,8 +34,8 @@
   <link id="pagestyle" href="../vendor/material-dashboard/assets/css/material-dashboard.css" rel="stylesheet" />
 </head>
 
-<body class="g-sidenav-show bg-gray-200">
-  <aside class="sidenav navbar navbar-vertical navbar-expand-xs border-0 border-radius-xl my-3 fixed-start ms-3 bg-gradient-dark" id="sidenav-main">
+<body class="g-sidenav-show  bg-gray-200">
+  <aside class="sidenav navbar navbar-vertical navbar-expand-xs border-0 border-radius-xl my-3 fixed-start ms-3   bg-gradient-dark" id="sidenav-main">
     <div class="sidenav-header">
       <a class="navbar-brand m-0" href="#" target="_blank">
         <span class="ms-1 font-weight-bold text-white">My Portfolio</span>
@@ -53,7 +53,7 @@
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link text-white active bg-gradient-primary" href="/admin/projects">
+          <a class="nav-link text-white" href="/admin/projects">
             <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
               <i class="material-icons opacity-10">table_view</i>
             </div>
@@ -61,7 +61,7 @@
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link text-white" href="/admin/create-project">
+          <a class="nav-link text-white active bg-gradient-primary" href="/admin/create-project">
             <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
               <i class="material-icons opacity-10">table_view</i>
             </div>
@@ -86,7 +86,8 @@
         <nav aria-label="breadcrumb">
           <ol class="breadcrumb bg-transparent mb-0 pb-0 pt-1 px-0 me-sm-6 me-5">
             <li class="breadcrumb-item text-sm"><a class="opacity-5 text-dark" href="javascript:;">Pages</a></li>
-            <li class="breadcrumb-item text-sm text-dark active" aria-current="page">Projects</li>
+            <li class="breadcrumb-item text-sm text-dark" aria-current="page">Projects</li>
+            <li class="breadcrumb-item text-sm text-dark active" aria-current="page">New Project</li>
           </ol>
         </nav>
         <div class="d-flex justify-content-end mb-3">
@@ -102,21 +103,27 @@
         <div class="col">
           <div class="card">
             <div class="card-body">
-              <div class="table-responsive" style="display: none;">
-                <table class="table align-items-center">
-                  <thead>
-                    <tr>
-                      <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Project</th>
-                      <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">URL</th>
-                      <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Repository</th>
-                      <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Status</th>
-                      <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7"></th>
-                    </tr>
-                  </thead>
-                  <tbody>
-                  </tbody>
-                </table>
-              </div>
+              <form id="projectForm" role="form" class="text-start">
+                <div class="input-group input-group-outline my-3">
+                  <label class="form-label">Name</label>
+                  <input type="text" name="name" class="form-control">
+                </div>
+                <div class="input-group input-group-outline mb-3">
+                  <label class="form-label">Description</label>
+                  <input type="text" name="description" class="form-control">
+                </div>
+                <div class="input-group input-group-outline mb-3">
+                  <label class="form-label">URL</label>
+                  <input type="text" name="url" class="form-control">
+                </div>
+                <div class="input-group input-group-outline mb-3">
+                  <label class="form-label">Repository</label>
+                  <input type="text" name="repository" class="form-control">
+                </div>
+                <div class="text-center">
+                  <button type="submit" class="btn bg-gradient-primary my-4 mb-2">Create</button>
+                </div>
+              </form>
             </div>
           </div>
         </div>
@@ -131,7 +138,7 @@
   <!-- Control Center for Material Dashboard: parallax effects, scripts for the example pages etc -->
   <script src="../vendor/material-dashboard/assets/js/material-dashboard.min.js?v=3.1.0"></script>
   <script type="text/javascript" src="/js/helpers/request.js"></script>
-  <script type="text/javascript" src="/js/projects.js"></script>
+  <script type="text/javascript" src="/js/project-form.js"></script>
 </body>
 
 </html>
