--- a/public/html/project-form.html
+++ b/public/html/project-form.html
@@ -18,20 +18,20 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="apple-touch-icon" sizes="76x76" href="../vendor/material-dashboard/assets/img/apple-icon.png">
-  <link rel="icon" type="image/png" href="../vendor/material-dashboard/assets/img/favicon.png">
-  <title>My Portfolio - New Project</title>
+  <link rel="apple-touch-icon" sizes="76x76" href="/vendor/material-dashboard/assets/img/apple-icon.png">
+  <link rel="icon" type="image/png" href="/vendor/material-dashboard/assets/img/favicon.png">
+  <title>My Portfolio - Project Form</title>
   <!--     Fonts and icons     -->
   <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900|Roboto+Slab:400,700" />
   <!-- Nucleo Icons -->
-  <link href="../vendor/material-dashboard/assets/css/nucleo-icons.css" rel="stylesheet" />
-  <link href="../vendor/material-dashboard/assets/css/nucleo-svg.css" rel="stylesheet" />
+  <link href="/vendor/material-dashboard/assets/css/nucleo-icons.css" rel="stylesheet" />
+  <link href="/vendor/material-dashboard/assets/css/nucleo-svg.css" rel="stylesheet" />
   <!-- Font Awesome Icons -->
   <script src="https://kit.fontawesome.com/42d5adcbca.js" crossorigin="anonymous"></script>
   <!-- Material Icons -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Round" rel="stylesheet">
   <!-- CSS Files -->
-  <link id="pagestyle" href="../vendor/material-dashboard/assets/css/material-dashboard.css" rel="stylesheet" />
+  <link id="pagestyle" href="/vendor/material-dashboard/assets/css/material-dashboard.css" rel="stylesheet" />
 </head>
 
 <body class="g-sidenav-show  bg-gray-200">
@@ -61,7 +61,7 @@
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link text-white active bg-gradient-primary" href="/admin/create-project">
+          <a class="nav-link text-white <%= !locals.project && 'active bg-gradient-primary' %>" href="/admin/create-project">
             <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
               <i class="material-icons opacity-10">table_view</i>
             </div>
@@ -87,7 +87,11 @@
           <ol class="breadcrumb bg-transparent mb-0 pb-0 pt-1 px-0 me-sm-6 me-5">
             <li class="breadcrumb-item text-sm"><a class="opacity-5 text-dark" href="javascript:;">Pages</a></li>
             <li class="breadcrumb-item text-sm text-dark" aria-current="page">Projects</li>
-            <li class="breadcrumb-item text-sm text-dark active" aria-current="page">New Project</li>
+            <% if (locals.project) { %>
+              <li class="breadcrumb-item text-sm text-dark active" aria-current="page">Update Project</li>
+            <% } else { %>
+              <li class="breadcrumb-item text-sm text-dark active" aria-current="page">New Project</li>
+            <% } %>
           </ol>
         </nav>
         <div class="d-flex justify-content-end mb-3">
@@ -104,24 +108,31 @@
           <div class="card">
             <div class="card-body">
               <form id="projectForm" role="form" class="text-start">
-                <div class="input-group input-group-outline my-3">
+                <% if (locals.project && locals.project.id) { %>
+                  <input type="hidden" name="id" value="<%= locals.project && locals.project.project_id %>">
+                <% } %>
+                <div class="input-group input-group-outline mb-3 <%= locals.project && locals.project.name && 'is-filled' %>">
                   <label class="form-label">Name</label>
-                  <input type="text" name="name" class="form-control">
+                  <input type="text" name="name" class="form-control" value="<%= locals.project && locals.project.name %>">
                 </div>
-                <div class="input-group input-group-outline mb-3">
+                <div class="input-group input-group-outline mb-3 <%= locals.project && locals.project.description && 'is-filled' %>">
                   <label class="form-label">Description</label>
-                  <input type="text" name="description" class="form-control">
+                  <input type="text" name="description" class="form-control" value="<%= locals.project && locals.project.description %>">
                 </div>
-                <div class="input-group input-group-outline mb-3">
+                <div class="input-group input-group-outline mb-3 <%= locals.project && locals.project.url && 'is-filled' %>">
                   <label class="form-label">URL</label>
-                  <input type="text" name="url" class="form-control">
+                  <input type="text" name="url" class="form-control" value="<%= locals.project && locals.project.url %>">
                 </div>
-                <div class="input-group input-group-outline mb-3">
+                <div class="input-group input-group-outline mb-3 <%= locals.project && locals.project.repository && 'is-filled' %>">
                   <label class="form-label">Repository</label>
-                  <input type="text" name="repository" class="form-control">
+                  <input type="text" name="repository" class="form-control" value="<%= locals.project && locals.project.repository %>">
                 </div>
                 <div class="text-center">
-                  <button type="submit" class="btn bg-gradient-primary my-4 mb-2">Create</button>
+                  <% if (locals.project) { %>
+                    <button type="submit" class="btn bg-gradient-primary my-4 mb-2">Update</button>
+                  <% } else { %>
+                    <button type="submit" class="btn bg-gradient-primary my-4 mb-2">Create</button>
+                  <% } %>
                 </div>
               </form>
             </div>
@@ -131,12 +142,12 @@
     </div>
   </main>
   <!--   Core JS Files   -->
-  <script src="../vendor/material-dashboard/assets/js/core/popper.min.js"></script>
-  <script src="../vendor/material-dashboard/assets/js/core/bootstrap.min.js"></script>
-  <script src="../vendor/material-dashboard/assets/js/plugins/perfect-scrollbar.min.js"></script>
-  <script src="../vendor/material-dashboard/assets/js/plugins/smooth-scrollbar.min.js"></script>
+  <script src="/vendor/material-dashboard/assets/js/core/popper.min.js"></script>
+  <script src="/vendor/material-dashboard/assets/js/core/bootstrap.min.js"></script>
+  <script src="/vendor/material-dashboard/assets/js/plugins/perfect-scrollbar.min.js"></script>
+  <script src="/vendor/material-dashboard/assets/js/plugins/smooth-scrollbar.min.js"></script>
   <!-- Control Center for Material Dashboard: parallax effects, scripts for the example pages etc -->
-  <script src="../vendor/material-dashboard/assets/js/material-dashboard.min.js?v=3.1.0"></script>
+  <script src="/vendor/material-dashboard/assets/js/material-dashboard.min.js?v=3.1.0"></script>
   <script type="text/javascript" src="/js/helpers/request.js"></script>
   <script type="text/javascript" src="/js/project-form.js"></script>
 </body>
