--- a/public/html/project-form.html
+++ b/public/html/project-form.html
@@ -78,23 +78,11 @@
       <div class="collapse navbar-collapse w-auto" id="sidenav-collapse-main">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link text-white" href="/admin">
-              <div
-                class="text-white text-center me-2 d-flex align-items-center justify-content-center"
-              >
-                <i class="material-icons opacity-10">dashboard</i>
-              </div>
-              <span class="nav-link-text ms-1">Dashboard</span>
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link text-white" href="/admin/projects">
-              <div
-                class="text-white text-center me-2 d-flex align-items-center justify-content-center"
-              >
+            <a class="nav-link text-white" href="/">
+              <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
                 <i class="material-icons opacity-10">table_view</i>
               </div>
-              <span class="nav-link-text ms-1">Projects</span>
+              <span class="nav-link-text ms-1">Home</span>
             </a>
           </li>
           <li class="nav-item">
@@ -129,9 +117,6 @@
             >
               <li class="breadcrumb-item text-sm">
                 <a class="opacity-5 text-dark" href="javascript:;">Pages</a>
-              </li>
-              <li class="breadcrumb-item text-sm text-dark" aria-current="page">
-                Projects
               </li>
               <% if (locals.project) { %>
               <li
