--- a/public/html/home.html
+++ b/public/html/home.html
@@ -16,59 +16,17 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
-    <link
-      rel="apple-touch-icon"
-      sizes="76x76"
-      href="/vendor/material-dashboard/assets/img/apple-icon.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      href="/vendor/material-dashboard/assets/img/favicon.png"
-    />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
+    <link rel="apple-touch-icon" sizes="76x76" href="/vendor/material-dashboard/assets/img/apple-icon.png"/>
+    <link rel="icon" type="image/png" href="/vendor/material-dashboard/assets/img/favicon.png"/>
     <title>My Portfolio - Home</title>
-    <!--     Fonts and icons     -->
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900|Roboto+Slab:400,700"
-    />
-    <!-- Nucleo Icons -->
-    <link
-      href="/vendor/material-dashboard/assets/css/nucleo-icons.css"
-      rel="stylesheet"
-    />
-    <link
-      href="/vendor/material-dashboard/assets/css/nucleo-svg.css"
-      rel="stylesheet"
-    />
-    <!-- Font Awesome Icons -->
-    <script
-      src="https://kit.fontawesome.com/42d5adcbca.js"
-      crossorigin="anonymous"
-    ></script>
-    <!-- Material Icons -->
-    <link
-      href="https://fonts.googleapis.com/icon?family=Material+Icons+Round"
-      rel="stylesheet"
-    />
-    <!-- CSS Files -->
-    <link
-      id="pagestyle"
-      href="/vendor/material-dashboard/assets/css/material-dashboard.css"
-      rel="stylesheet"
-    />
+    <script src="https://kit.fontawesome.com/42d5adcbca.js" crossorigin="anonymous"></script>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Round" rel="stylesheet"/>
+    <link id="pagestyle" href="/vendor/material-dashboard/assets/css/material-dashboard.css" rel="stylesheet"/>
   </head>
 
   <body class="g-sidenav-show bg-gray-200">
-    <aside
-      class="sidenav navbar navbar-vertical navbar-expand-xs border-0 border-radius-xl my-3 fixed-start ms-3 bg-gradient-dark"
-      id="sidenav-main"
-    >
+    <aside class="sidenav navbar navbar-vertical navbar-expand-xs border-0 border-radius-xl my-3 fixed-start ms-3 bg-gradient-dark" id="sidenav-main">
       <div class="sidenav-header">
         <a class="navbar-brand m-0" href="#" target="_blank">
           <span class="ms-1 font-weight-bold text-white">My Portfolio</span>
@@ -96,29 +54,16 @@
         </ul>
       </div>
     </aside>
-    <main
-      class="main-content position-relative max-height-vh-100 h-100 border-radius-lg"
-    >
+    <main class="main-content position-relative max-height-vh-100 h-100 border-radius-lg">
       <!-- Navbar -->
-      <nav
-        class="navbar navbar-main navbar-expand-lg px-0 mx-4 shadow-none border-radius-xl"
-        id="navbarBlur"
-        data-scroll="true"
-      >
+      <nav class="navbar navbar-main navbar-expand-lg px-0 mx-4 shadow-none border-radius-xl" id="navbarBlur" data-scroll="true">
         <div class="container-fluid py-1 px-3">
           <nav aria-label="breadcrumb">
-            <ol
-              class="breadcrumb bg-transparent mb-0 pb-0 pt-1 px-0 me-sm-6 me-5"
-            >
+            <ol class="breadcrumb bg-transparent mb-0 pb-0 pt-1 px-0 me-sm-6 me-5">
               <li class="breadcrumb-item text-sm">
                 <a class="opacity-5 text-dark" href="javascript:;">Pages</a>
               </li>
-              <li
-                class="breadcrumb-item text-sm text-dark active"
-                aria-current="page"
-              >
-                Home
-              </li>
+              <li class="breadcrumb-item text-sm text-dark active" aria-current="page">Home</li>
             </ol>
           </nav>
           <div class="d-flex justify-content-end mb-3">
@@ -138,29 +83,19 @@
                   <table class="table align-items-center">
                     <thead>
                       <tr>
-                        <th
-                          class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7"
-                        >
+                        <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">
                           Project
                         </th>
-                        <th
-                          class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7"
-                        >
+                        <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">
                           URL
                         </th>
-                        <th
-                          class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7"
-                        >
+                        <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">
                           Repository
                         </th>
-                        <th
-                          class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7"
-                        >
+                        <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">
                           Status
                         </th>
-                        <th
-                          class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7"
-                        ></th>
+                        <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7"></th>
                       </tr>
                     </thead>
                     <tbody></tbody>
@@ -172,12 +107,9 @@
         </div>
       </div>
     </main>
-    <!--   Core JS Files   -->
     <script src="/vendor/material-dashboard/assets/js/core/popper.min.js"></script>
     <script src="/vendor/material-dashboard/assets/js/core/bootstrap.min.js"></script>
     <script src="/vendor/material-dashboard/assets/js/plugins/perfect-scrollbar.min.js"></script>
-    <script src="/vendor/material-dashboard/assets/js/plugins/smooth-scrollbar.min.js"></script>
-    <!-- Control Center for Material Dashboard: parallax effects, scripts for the example pages etc -->
     <script src="/vendor/material-dashboard/assets/js/material-dashboard.min.js?v=3.1.0"></script>
     <script type="text/javascript" src="/js/helpers/request.js"></script>
     <script type="text/javascript" src="/js/home.js"></script>
