--- a/public/html/project-form.html
+++ b/public/html/project-form.html
@@ -70,7 +70,7 @@
             </ol>
           </nav>
           <div class="d-flex justify-content-end mb-3">
-            <a href="#" class="nav-link text-body font-weight-bold px-0">
+            <a id="logout" class="nav-link text-body font-weight-bold px-0" style="cursor: pointer;">
               <span class="d-sm-inline d-none">Logout</span>
             </a>
           </div>
@@ -125,6 +125,7 @@
       </div>
     </main>
     <script type="text/javascript" src="/js/helpers/request.js"></script>
+    <script type="text/javascript" src="/js/helpers/logout.js"></script>
     <script type="text/javascript" src="/js/project-form.js"></script>
   </body>
 </html>
