--- a/public/html/home.html
+++ b/public/html/home.html
@@ -67,7 +67,7 @@
             </ol>
           </nav>
           <div class="d-flex justify-content-end mb-3">
-            <a href="#" class="nav-link text-body font-weight-bold px-0">
+            <a id="logout" class="nav-link text-body font-weight-bold px-0" style="cursor: pointer;">
               <span class="d-sm-inline d-none">Logout</span>
             </a>
           </div>
@@ -112,6 +112,7 @@
     <script src="/vendor/material-dashboard/assets/js/plugins/perfect-scrollbar.min.js"></script>
     <script src="/vendor/material-dashboard/assets/js/material-dashboard.min.js?v=3.1.0"></script>
     <script type="text/javascript" src="/js/helpers/request.js"></script>
+    <script type="text/javascript" src="/js/helpers/logout.js"></script>
     <script type="text/javascript" src="/js/home.js"></script>
   </body>
 </html>
