--- a/public/html/login.html
+++ b/public/html/login.html
@@ -15,31 +15,13 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
-    <link
-      rel="apple-touch-icon"
-      sizes="76x76"
-      href="/vendor/material-dashboard/assets/img/apple-icon.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      href="/vendor/material-dashboard/assets/img/favicon.png"
-    />
+    <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
+    <link rel="apple-touch-icon" sizes="76x76" href="/vendor/material-dashboard/assets/img/apple-icon.png"/>
+    <link rel="icon" type="image/png" href="/vendor/material-dashboard/assets/img/favicon.png"/>
     <title>My Portfolio - Project Form</title>
-    <link
-      href="https://fonts.googleapis.com/icon?family=Material+Icons+Round"
-      rel="stylesheet"
-    />
-    <link
-      id="pagestyle"
-      href="/vendor/material-dashboard/assets/css/material-dashboard.css"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Round" rel="stylesheet"/>
+    <link id="pagestyle" href="/vendor/material-dashboard/assets/css/material-dashboard.css" rel="stylesheet"/>
   </head>
 
   <body class="bg-gray-200">
@@ -53,17 +35,14 @@
                   <form id="loginForm" class="text-start" role="form">
                     <div class="input-group input-group-outline mb-3">
                       <label class="form-label">Email</label>
-                      <input type="text" name="email" class="form-control" />
+                      <input type="text" name="email" class="form-control"/>
                     </div>
                     <div class="input-group input-group-outline mb-3">
                       <label class="form-label">Password</label>
-                      <input type="text" name="password" class="form-control" />
+                      <input type="text" name="password" class="form-control"/>
                     </div>
                     <div class="text-center">
-                      <button
-                        type="submit"
-                        class="btn bg-gradient-primary my-4 mb-2"
-                      >
+                      <button type="submit" class="btn bg-gradient-primary my-4 mb-2">
                         Login
                       </button>
                     </div>
