--- a/public/html/login.html
+++ b/public/html/login.html
@@ -54,6 +54,8 @@
         </div>
       </div>
     </main>
+    <script src="/vendor/material-dashboard/assets/js/plugins/perfect-scrollbar.min.js"></script>
+    <script src="/vendor/material-dashboard/assets/js/material-dashboard.min.js?v=3.1.0"></script>
     <script type="text/javascript" src="/js/helpers/request.js"></script>
     <script type="text/javascript" src="/js/login.js"></script>
   </body>
