--- a/public/html/admin.html
+++ b/public/html/admin.html
@@ -19,7 +19,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
     <link rel="apple-touch-icon" sizes="76x76" href="/vendor/material-dashboard/assets/img/apple-icon.png"/>
     <link rel="icon" type="image/png" href="/vendor/material-dashboard/assets/img/favicon.png"/>
-    <title>My Portfolio - Project Form</title>
+    <title>My Portfolio - Admin</title>
+    <script src="https://kit.fontawesome.com/42d5adcbca.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Round" rel="stylesheet"/>
     <link id="pagestyle" href="/vendor/material-dashboard/assets/css/material-dashboard.css" rel="stylesheet"/>
   </head>
@@ -35,7 +36,7 @@
       <div class="collapse navbar-collapse w-auto" id="sidenav-collapse-main">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link text-white" href="/admin">
+            <a class="nav-link text-white active bg-gradient-primary" href="/admin">
               <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
                 <i class="material-icons opacity-10">table_view</i>
               </div>
@@ -43,7 +44,7 @@
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-white <%= !locals.project && 'active bg-gradient-primary' %>" href="/admin/create-project">
+            <a class="nav-link text-white" href="/admin/create-project">
               <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
                 <i class="material-icons opacity-10">table_view</i>
               </div>
@@ -62,11 +63,7 @@
               <li class="breadcrumb-item text-sm">
                 <a class="opacity-5 text-dark" href="javascript:;">Pages</a>
               </li>
-              <% if (locals.project) { %>
-                <li class="breadcrumb-item text-sm text-dark active" aria-current="page">Update Project</li>
-              <% } else { %>
-                <li class="breadcrumb-item text-sm text-dark active" aria-current="page">New Project</li>
-              <% } %>
+              <li class="breadcrumb-item text-sm text-dark active" aria-current="page">Admin</li>
             </ol>
           </nav>
           <div class="d-flex justify-content-end mb-3">
@@ -82,54 +79,40 @@
           <div class="col">
             <div class="card">
               <div class="card-body">
-                <form id="projectForm" role="form" class="text-start" enctype="multipart/form-data">
-                  <% if (locals.project && locals.project.project_id) { %>
-                    <input type="hidden" name="project_id" value="<%= locals.project && locals.project.project_id %>"/>
-                  <% } %>
-                  <div class="input-group input-group-outline mb-3">
-                    <% if (locals.project && locals.project.cover) { %>
-                      <img id="cover" src="<%= locals.project.cover %>" style="max-height: 200px;" alt="project cover">
-                    <% } else { %>
-                      <img id="cover" style="max-height: 200px; display: none;" alt="project cover">
-                    <% } %>
-                  </div>
-                  <div class="input-group input-group-outline mb-3">
-                    <input id="attachment" type="file" name="attachment" class="form-control"/>
-                  </div>
-                  <div class="input-group input-group-outline mb-3 <%= locals.project && locals.project.name && 'is-filled' %>">
-                    <label class="form-label">Name</label>
-                    <input type="text" name="name" class="form-control" value="<%= locals.project && locals.project.name %>"/>
-                  </div>
-                  <div class="input-group input-group-outline mb-3 <%= locals.project && locals.project.description && 'is-filled' %>">
-                    <label class="form-label">Description</label>
-                    <input type="text" name="description" class="form-control" value="<%= locals.project && locals.project.description %>"/>
-                  </div>
-                  <div class="input-group input-group-outline mb-3 <%= locals.project && locals.project.url && 'is-filled' %>">
-                    <label class="form-label">URL</label>
-                    <input type="text" name="url" class="form-control" value="<%= locals.project && locals.project.url %>"/>
-                  </div>
-                  <div class="input-group input-group-outline mb-3 <%= locals.project && locals.project.repository && 'is-filled' %>">
-                    <label class="form-label">Repository</label>
-                    <input type="text" name="repository" class="form-control" value="<%= locals.project && locals.project.repository %>"/>
-                  </div>
-                  <div class="text-center">
-                    <% if (locals.project) { %>
-                      <button type="submit" class="btn bg-gradient-primary my-4 mb-2">Update</button>
-                    <% } else { %>
-                      <button type="submit" class="btn bg-gradient-primary my-4 mb-2">Create</button>
-                    <% } %>
-                  </div>
-                </form>
+                <div class="table-responsive" style="display: none">
+                  <table class="table align-items-center">
+                    <thead>
+                      <tr>
+                        <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">
+                          Project
+                        </th>
+                        <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">
+                          URL
+                        </th>
+                        <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">
+                          Repository
+                        </th>
+                        <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">
+                          Status
+                        </th>
+                        <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7"></th>
+                      </tr>
+                    </thead>
+                    <tbody></tbody>
+                  </table>
+                </div>
               </div>
             </div>
           </div>
         </div>
       </div>
     </main>
+    <script src="/vendor/material-dashboard/assets/js/core/popper.min.js"></script>
+    <script src="/vendor/material-dashboard/assets/js/core/bootstrap.min.js"></script>
     <script src="/vendor/material-dashboard/assets/js/plugins/perfect-scrollbar.min.js"></script>
     <script src="/vendor/material-dashboard/assets/js/material-dashboard.min.js?v=3.1.0"></script>
     <script type="text/javascript" src="/js/helpers/request.js"></script>
     <script type="text/javascript" src="/js/helpers/logout.js"></script>
-    <script type="text/javascript" src="/js/project-form.js"></script>
+    <script type="text/javascript" src="/js/home.js"></script>
   </body>
 </html>
