--- a/public/html/login.html
+++ b/public/html/login.html
@@ -19,7 +19,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
     <link rel="apple-touch-icon" sizes="76x76" href="/vendor/material-dashboard/assets/img/apple-icon.png"/>
     <link rel="icon" type="image/png" href="/vendor/material-dashboard/assets/img/favicon.png"/>
-    <title>My Portfolio - Project Form</title>
+    <title>My Portfolio - Login</title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Round" rel="stylesheet"/>
     <link id="pagestyle" href="/vendor/material-dashboard/assets/css/material-dashboard.css" rel="stylesheet"/>
   </head>
@@ -39,7 +39,7 @@
                     </div>
                     <div class="input-group input-group-outline mb-3">
                       <label class="form-label">Password</label>
-                      <input type="text" name="password" class="form-control"/>
+                      <input type="password" name="password" class="form-control"/>
                     </div>
                     <div class="text-center">
                       <button type="submit" class="btn bg-gradient-primary my-4 mb-2">
