--- a/public/html/admin.html
+++ b/public/html/admin.html
@@ -113,6 +113,6 @@
     <script src="/vendor/material-dashboard/assets/js/material-dashboard.min.js?v=3.1.0"></script>
     <script type="text/javascript" src="/js/helpers/request.js"></script>
     <script type="text/javascript" src="/js/helpers/logout.js"></script>
-    <script type="text/javascript" src="/js/home.js"></script>
+    <script type="text/javascript" src="/js/admin.js"></script>
   </body>
 </html>
