--- a/public/html/home.html
+++ b/public/html/home.html
@@ -132,7 +132,7 @@
       <div class="container section-container">
         <div class="row gy-4">
           <div class="col-lg-6 mt-0 mx-auto">
-            <form action="forms/contact.php" method="post" class="php-email-form" data-aos-delay="200">
+            <form id="contactForm" method="post" class="php-email-form" data-aos-delay="200">
               <div class="row gy-4">
                 <div class="col-md-6">
                   <input type="text" name="name" class="form-control" placeholder="Your Name" required="">
@@ -150,7 +150,7 @@
                   <div class="loading">Loading</div>
                   <div class="error-message"></div>
                   <div class="sent-message">Your message has been sent. Thank you!</div>
-                  <button type="submit">Send Message</button>
+                  <button id="formSubmit" type="submit">Send Message</button>
                 </div>
               </div>
             </form>
