--- a/public/html/project-form.html
+++ b/public/html/project-form.html
@@ -31,7 +31,7 @@
           <span class="ms-1 font-weight-bold text-white">My Portfolio</span>
         </a>
       </div>
-      <hr class="horizontal light mt-0 mb-2" />
+      <hr class="horizontal light mt-0 mb-2"/>
       <div class="collapse navbar-collapse w-auto" id="sidenav-collapse-main">
         <ul class="navbar-nav">
           <li class="nav-item">
@@ -43,7 +43,7 @@
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-white <%= !locals.project && 'active bg-gradient-primary' %>" href="/admin/create-project">
+            <a class="nav-link text-white <%= !locals.project.project_id && 'active bg-gradient-primary' %>" href="/admin/create-project">
               <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
                 <i class="material-icons opacity-10">table_view</i>
               </div>
@@ -62,7 +62,7 @@
               <li class="breadcrumb-item text-sm">
                 <a class="opacity-5 text-dark" href="javascript:;">Pages</a>
               </li>
-              <% if (locals.project) { %>
+              <% if (locals.project && locals.project.project_id) { %>
                 <li class="breadcrumb-item text-sm text-dark active" aria-current="page">Update Project</li>
               <% } else { %>
                 <li class="breadcrumb-item text-sm text-dark active" aria-current="page">New Project</li>
@@ -110,7 +110,7 @@
                     <input type="text" name="repository" class="form-control" value="<%= locals.project && locals.project.repository %>"/>
                   </div>
                   <div class="text-center">
-                    <% if (locals.project) { %>
+                    <% if (locals.project && locals.project.project_id) { %>
                       <button type="submit" class="btn bg-gradient-primary my-4 mb-2">Update</button>
                     <% } else { %>
                       <button type="submit" class="btn bg-gradient-primary my-4 mb-2">Create</button>
