[frontend] contactService created

--- a/public/html/home.html
+++ b/public/html/home.html
@@ -189,9 +189,10 @@
   <script src="/vendor/MyResume/assets/vendor/swiper/swiper-bundle.min.js"></script>
 
   <!-- Main JS File -->
-  <script src="/vendor/MyResume/assets/js/main.js"></script>
-  <script src="/js/helpers/request.js"></script>
-  <script src="/js/home.js"></script>
+  <script type="text/javascript" src="/vendor/MyResume/assets/js/main.js"></script>
+  <script type="text/javascript" src="/js/helpers/request.js"></script>
+  <script type="text/javascript" src="/js/services/contactService.js"></script>
+  <script type="text/javascript" src="/js/home.js"></script>
 </body>
 
 </html>
