--- a/public/html/home.html
+++ b/public/html/home.html
@@ -191,6 +191,7 @@
   <!-- Main JS File -->
   <script type="text/javascript" src="/vendor/MyResume/assets/js/main.js"></script>
   <script type="text/javascript" src="/js/helpers/request.js"></script>
+  <script type="text/javascript" src="/js/services/projectService.js"></script>
   <script type="text/javascript" src="/js/services/contactService.js"></script>
   <script type="text/javascript" src="/js/home.js"></script>
 </body>
