--- a/public/html/project-form.html
+++ b/public/html/project-form.html
@@ -127,6 +127,7 @@
     <script src="/vendor/material-dashboard/assets/js/material-dashboard.min.js?v=3.1.0"></script>
     <script type="text/javascript" src="/js/helpers/request.js"></script>
     <script type="text/javascript" src="/js/helpers/logout.js"></script>
+    <script type="text/javascript" src="/js/services/projectService.js"></script>
     <script type="text/javascript" src="/js/project-form.js"></script>
   </body>
 </html>
